--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -5,11 +5,15 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title #{pageTitle}
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css")
+    link(rel="stylesheet", href="https://unpkg.com/filepond@^4/dist/filepond.css")
+    link(rel="stylesheet", href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css")
     link(rel="stylesheet", href="/admin/assets/css/style.css")
+    script.
+      const pathAdmin = "#{pathAdmin}";
   body
-    //- - if(messages.success)
-    //-   div(class="alert alert-success" alert-time = "3000")
-    //-     span #{messages.success}
+    - if(messages.success)
+      div(class="alert alert-success" alert-time = "3000")
+        span #{messages.success}
     //- Header
     include ../partials/header.pug
     //- End Header
@@ -22,4 +26,8 @@ html
     main.main
       block main
     //- End Main
+    script(src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js") 
+    script(src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js") 
+    script(src="https://unpkg.com/filepond@^4/dist/filepond.js")
+    script(src="https://cdn.jsdelivr.net/npm/just-validate@4.3.0/dist/just-validate.production.min.js")
     script(src="/admin/assets/js/script.js")
