--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -12,6 +12,6 @@ header.header
         img(src=account.avatar, alt="")
       .inner-text
         .inner-name #{account.full_name}
-        .inner-role #{account.role}
+        .inner-role #{account.rolename}
     button.inner-button-menu
       <i class="fa-solid fa-bars"></i>
