--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -59,7 +59,7 @@ nav.sider
             i.fa-solid.fa-user
             |  Quản lý người dùng
         li
-          a(href="") 
+          a(href=`/${pathAdmin}/role/list`) 
             i.fa-solid.fa-user-lock
             |  Phân quyền
     hr
