--- a/views/admin/layouts/account.pug
+++ b/views/admin/layouts/account.pug
@@ -2,7 +2,7 @@ html
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title pageTitle
+    title Đăng nhập
     link(rel="stylesheet", href="/admin/assets/css/style.css")
     script.
       const pathAdmin= "#{pathAdmin}"
