--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -5,8 +5,8 @@ header.header
       span Admin
   .inner-wrap
     .inner-notify
-      img(src="/admin/assets/images/icon-bell.svg", alt="")
-      span 6
+      //- img(src="/admin/assets/images/icon-bell.svg", alt="")
+      //- span 6
     .inner-account
       .inner-avatar
         img(src=account.avatar, alt="")
