--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -2,72 +2,271 @@
 nav.sider
   ul.inner-menu
     li
-      a(href=`/${pathAdmin}/dashboard`)
+      a.dashboard(href=`/${pathAdmin}/dashboard`)
         i.fa-solid.fa-gauge-high
-        |  Dashboard
+        |  Tổng quan
 
     //- Dropdown: Sâu róm thông
-    li.dropdown
-      a(href="")
-        <i class="fa-solid fa-mosquito"></i>
+    li
+      div.item_menu
+        i.fa-solid.fa-mosquito
         |  Sâu róm thông
         i.fa-solid.fa-chevron-down.arrow
       ul.submenu
-        li: a(href="#") Hà Nội
-        li: a(href="#") Hồ Chí Minh
-        li: a(href="#") Đà Nẵng
-        li: a(href="#") Hải Phòng
-        li: a(href="#") Cần Thơ
-
-    //- Dropdown: Sâu hại lá keo
-    li.dropdown
-      a(href="")
-        <i class="fa-solid fa-mosquito"></i>
+        li
+          div.item_city Thanh Hóa
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/map/indexth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Nghệ An
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexna`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/map/indexna`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Hà Tĩnh
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexht`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/map/indexht`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Bình
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexqb`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.mnenu(href=`/${pathAdmin}/sauromthong/map/indexqb`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Trị
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexqt`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/map/indexqt`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Thừa Thiên Huế
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indextth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/srt/indextth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+            
+    li
+      div.item_menu
+        i.fa-solid.fa-mosquito
         |  Sâu hại lá keo
         i.fa-solid.fa-chevron-down.arrow
       ul.submenu
-        li: a(href="#") Hà Nội
-        li: a(href="#") Hồ Chí Minh
-        li: a(href="#") Đà Nẵng
-        li: a(href="#") Hải Phòng
-        li: a(href="#") Cần Thơ
-
-    //- Dropdown: Bệnh hại lá keo
-    li.dropdown
-      a(href="")
-        <i class="fa-solid fa-mosquito"></i>
+        li
+          div.item_city Thanh Hóa
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/map/indexth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Nghệ An
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexna`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/map/indexna`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Hà Tĩnh
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexht`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/map/indexht`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Bình
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexqb`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.mnenu(href=`/${pathAdmin}/saulakeo/map/indexqb`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Trị
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexqt`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/map/indexqt`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Thừa Thiên Huế
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indextth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/saulakeo/srt/indextth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ        
+    li
+      div.item_menu
+        i.fa-solid.fa-mosquito
         |  Bệnh hại lá keo
         i.fa-solid.fa-chevron-down.arrow
       ul.submenu
-        li: a(href="#") Hà Nội
-        li: a(href="#") Hồ Chí Minh
-        li: a(href="#") Đà Nẵng
-        li: a(href="#") Hải Phòng
-        li: a(href="#") Cần Thơ
-    li.dropdown
-      a(href="" )
+        li
+          div.item_city Thanh Hóa
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Nghệ An
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexna`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexna`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Hà Tĩnh
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexht`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexht`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Bình
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexqb`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.mnenu(href=`/${pathAdmin}/benhlakeo/map/indexqb`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Quảng Trị
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexqt`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexqt`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ
+        li
+          div.item_city Thừa Thiên Huế
+            i.fa-solid.fa-chevron-down.arrow
+          ul.submenu-child
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indextth`) 
+                i.fa-solid.fa-database 
+                | Dữ liệu SRT
+            li 
+              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indextth`)
+                i.fa-solid.fa-map-location-dot 
+                | Dữ liệu bản đồ        
+      
+    li
+      div.item_menu
         <i class="fa-solid fa-gears"></i>
         |  Quản trị hệ thống
         i.fa-solid.fa-chevron-down.arrow
-      ul.submenu
+      ul.submenu2
         li
-          a(href="") 
+          a.menu2(href=`/${pathAdmin}/user/log`) 
             i.fa-solid.fa-user-clock
             |  Lịch sử người dùng
         li
-          a(href=`/${pathAdmin}/account-admin/list`) 
+          a.menu2(href=`/${pathAdmin}/account-admin/list`) 
             i.fa-solid.fa-user
             |  Quản lý người dùng
         li
-          a(href="") 
+          a.menu2(href=`/${pathAdmin}/role/list`) 
             i.fa-solid.fa-user-lock
             |  Phân quyền
     hr
 
-    li
-      a(href="")
-        i.fa-solid.fa-user-gear
-        |  Thông tin cá nhân
+    //- li
+    //-   a(href="")
+    //-     i.fa-solid.fa-user-gear
+    //-     |  Thông tin cá nhân
 
     li
       a(href="javascript:;", class="inner-logout")
